--- a/static/main.css
+++ b/static/main.css
@@ -90,11 +90,23 @@ h2, h3, h4, h5, h6 {
 
 .container{
   margin-top: 10px;
+  max-width: 82%;
+}
+
+.url .container{
+  margin-top: 10px;
+  max-width: 100%;
+}
+
+.Article .article{
+  margin-top: 10px;
+  max-width: 100%;
 }
 
 .evaluation_article .container{
   margin-top: 10px;
   margin-left: 8.5%;
+  margin-bottom: 5%;
 }
 
 .article .form-group .form-control{
@@ -135,7 +147,7 @@ h2, h3, h4, h5, h6 {
   border: 1px solid #A9A9A9;
   border-radius: 5px;
   margin-bottom: 10px;
-  margin-top: 5%;
+  margin-top: 0%;
   width: 70%;
   margin-right: auto;
   margin-left: 10%;
@@ -214,7 +226,6 @@ h2, h3, h4, h5, h6 {
 .evaluation_metrics{
   float: left;
   max-width: 40%;
-  margin-top: 3%;
 }
 
 .link-button{
@@ -356,7 +367,7 @@ h2, h3, h4, h5, h6 {
     width: 0.7%;
     height: 90%;
     background-color: black;
-    animation: cssAnimation 0s 7s forwards;
+    animation: cssAnimation 0s 5s forwards;
     visibility: hidden;
 }
 .ref:before {
@@ -369,7 +380,7 @@ h2, h3, h4, h5, h6 {
     text-align: center;
     font-size: 15px;
     margin-top: 6px;
-    animation: cssAnimation 0s 7s forwards;
+    animation: cssAnimation 0s 5s forwards;
     visibility: hidden;
 
 }
@@ -399,7 +410,7 @@ h2, h3, h4, h5, h6 {
   background-color: #FCBC51; 
   width: 100%; 
   background-image: linear-gradient( 90deg, green 20%, green 20%, yellow 40%, yellow 60%, red 80%, red 80%, red); 
-  animation: progressAnimationStrike 6s;
+  animation: progressAnimationStrike 4s;
 }
 
 @keyframes cssAnimation {
