--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,8 +41,8 @@
             Evaluation
           </a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="evaluation">Without labels</a>
-            <a class="dropdown-item" href="evaluation_labels">With Labels</a>
+            <a class="dropdown-item" href="evaluation">Without Indicators</a>
+            <a class="dropdown-item" href="evaluation_labels">With Indicators</a>
           </div>
         </li>
         <li class="nav-item">
