--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,14 +36,10 @@
           <a class="nav-link" href="#">Fact-checks</a>
         </li>
         <!-- Dropdown -->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+        <li class="nav-item ">
+          <a class="nav-link " href="evaluation">
             Evaluation
           </a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="evaluation">Without Indicators</a>
-            <a class="dropdown-item" href="evaluation_labels">With Indicators</a>
-          </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">How it works</a>
